# Wolfenstein

./: .gitignore  CMakeLists.txt  Makefile  README.md  list_forb_functions.sh  main.c  map.cub  notes
.github/workflows/: c-cpp.yml
assets/maps/: map.cub  mini.cub
assets/textures/: t4_1.xpm  wood.xpm  wood.xpm42
cube3D/: Makefile  cub3D  main.c
cube3D/includes/: srcs.h
cube3D/libc/: fatal.c  ft_atoi.c  ft_calloc.c  ft_memcpy.c  ft_memset.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strlen.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  get_next_line.c  split_utils.c
cube3D/srcs/: inits.c
includes/: libc.h  srcs.h
lib/MLX42/: CMakeLists.txt  README.md
lib/libc/: fatal.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_memcpy.c  ft_memset.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strlen.c  ft_strncmp.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  get_next_line.c  split_utils.c  strjoin.c
libc/: ft_atoi.c  ft_calloc.c  ft_memcpy.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strlen.c  ft_strncmp.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  get_next_line.c  get_next_line_utils.c  libc.h  printing.c  split_utils.c  strjoin.c
paint/: colorstone.xpm42  main.c  mait.c  wall.xpm42
srcs/: drawing.c  hooks.c  inits.c  parsing.c  parsing.cpp  parsing_elements.c  parsing_elements.cpp  parsing_map.c  parsing_map.cpp  parsing_utils.c  parsing_utils.cpp  srcs.h
srcs/engine/: hooks.c  minimap.c  minimap_utils.c  move.c  raycasting.c  textures.c  utils.c  view.c
srcs/norm/: ft_mlx.c  syscalls.c
srcs/parsing/: parse_elements.c  parse_map.c  (+3 more)
tests/: Makefile  is_all_spaces.c  test_is_filename_valid.c  test_strjoin.c
textures/: grass.xpm42  t1_1.xpm  t2.xpm  t3_1.xpm  wall.xpm
(+61 files in other folders)
